Add provider selection and SEO Metadata. Update `README.md`

--- a/index.html
+++ b/index.html
@@ -1,14 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <!-- Primary Meta Tags -->
     <title>MINI</title>
+    <meta name="title" content="MINI - YouTube Video Player" />
+    <meta
+      name="description"
+      content="⚡Fast client-side YouTube video player via piped.video and cobalt.tools APIs ⚡"
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mini-g4kf.onrender.com/" />
+    <meta property="og:title" content="MINI - YouTube Video Player" />
+    <meta
+      property="og:description"
+      content="⚡Fast client-side YouTube video player via piped.video and cobalt.tools APIs ⚡"
+    />
+    <meta
+      property="og:image"
+      content="./images/banner@full.png"
+    />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mini-g4kf.onrender.com/" />
+    <meta property="twitter:title" content="MINI - YouTube Video Player" />
+    <meta
+      property="twitter:description"
+      content="⚡Fast client-side YouTube video player via piped.video and cobalt.tools APIs ⚡"
+    />
+    <meta
+      property="twitter:image"
+      content="./images/banner@full.png"
+    />
   </head>
   <body>
     <div id="root"></div>
