Add some SEO Metadata

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       href="./icons/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
+    <meta name="author" content="a3ldi" />
+    <meta name="robots" content="index, nofollow" />
     <!-- Primary Meta Tags -->
     <title>MINI</title>
     <meta name="title" content="MINI - YouTube Video Player" />
@@ -36,10 +38,7 @@
       property="og:description"
       content="⚡Fast client-side YouTube video player via piped.video and cobalt.tools APIs ⚡"
     />
-    <meta
-      property="og:image"
-      content="./images/banner@full.png"
-    />
+    <meta property="og:image" content="https://mini.a3ldi.ru/images/banner@full.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://mini-g4kf.onrender.com/" />
@@ -48,10 +47,8 @@
       property="twitter:description"
       content="⚡Fast client-side YouTube video player via piped.video and cobalt.tools APIs ⚡"
     />
-    <meta
-      property="twitter:image"
-      content="./images/banner@full.png"
-    />
+    <meta property="twitter:image" content="https://mini.a3ldi.ru/images/banner@full.png" />
+    <link rel="canonical" href="https://mini.a3ldi.ru/" />
   </head>
   <body>
     <div id="root"></div>
