Add Search Console Verifications

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     />
     <meta property="twitter:image" content="https://mini.a3ldi.ru/images/banner@full.png" />
     <link rel="canonical" href="https://mini.a3ldi.ru/" />
+    <meta name="google-site-verification" content="WaD_THosv2WZdsgagY4bYiNu3VFckrmFN4Q-98qOeZI" />
+    <meta name="yandex-verification" content="5493651eb3263239" />
   </head>
   <body>
     <div id="root"></div>
