--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       content="⚡Fast client-side YouTube video player via piped.video and cobalt.tools APIs ⚡"
     />
     <meta property="og:image" content="https://mini.a3ldi.ru/images/banner@full.png" />
+    <meta property="vk:image" content="https://mini.a3ldi.ru/images/banner@square.png" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://mini-g4kf.onrender.com/" />
