New PWA Maniest

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -32,14 +32,20 @@
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mini-g4kf.onrender.com/" />
+    <meta property="og:url" content="https://mini.a3ldi.ru/" />
     <meta property="og:title" content="MINI - YouTube Video Player" />
     <meta
       property="og:description"
       content="⚡Fast client-side YouTube video player via piped.video and cobalt.tools APIs ⚡"
     />
-    <meta property="og:image" content="https://mini.a3ldi.ru/images/banner@full.png" />
-    <meta property="vk:image" content="https://mini.a3ldi.ru/images/banner@square.png" />
+    <meta
+      property="og:image"
+      content="https://mini.a3ldi.ru/images/banner@full.png"
+    />
+    <meta
+      property="vk:image"
+      content="https://mini.a3ldi.ru/images/banner@square.png"
+    />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://mini-g4kf.onrender.com/" />
@@ -48,9 +54,15 @@
       property="twitter:description"
       content="⚡Fast client-side YouTube video player via piped.video and cobalt.tools APIs ⚡"
     />
-    <meta property="twitter:image" content="https://mini.a3ldi.ru/images/banner@full.png" />
+    <meta
+      property="twitter:image"
+      content="https://mini.a3ldi.ru/images/banner@full.png"
+    />
     <link rel="canonical" href="https://mini.a3ldi.ru/" />
-    <meta name="google-site-verification" content="WaD_THosv2WZdsgagY4bYiNu3VFckrmFN4Q-98qOeZI" />
+    <meta
+      name="google-site-verification"
+      content="WaD_THosv2WZdsgagY4bYiNu3VFckrmFN4Q-98qOeZI"
+    />
     <meta name="yandex-verification" content="5493651eb3263239" />
   </head>
   <body>
