--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="https://mini.a3ldi.ru/favicon.ico" type="image/x-icon">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
