Mobile optimizations. Invidious instances

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       content="WaD_THosv2WZdsgagY4bYiNu3VFckrmFN4Q-98qOeZI"
     />
     <meta name="yandex-verification" content="5493651eb3263239" />
+    <link rel="preload" href="./fonts/ClashDisplay-Variable.woff2" />
   </head>
   <body>
     <div id="root"></div>
